force-app/main/default/objects/QAC_Pricebook_Detail__mdt/QAC_Pricebook_Detail__mdt.object-meta.xml
<CustomObject>
    <label>QAC Pricebook Detail</label>
    <pluralLabel>QAC Pricebook Details</pluralLabel>
</CustomObject>