force-app/main/default/objects/QAC_Pricebook_Detail__mdt/fields/Origin_Website__c.field-meta.xml
<CustomField>
    <fullName>Origin_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origin : Website ?</label>
    <type>Checkbox</type>
</CustomField>