force-app/main/default/objects/QAC_Pricebook_Detail__mdt/fields/Pricebook_Channel__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Channel__c</fullName>
    <label>Pricebook Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <default>true</default>
                <label>Call</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>