force-app/main/default/objects/QAC_Pricebook_Detail__mdt/fields/Pricebook_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Country_Code__c</fullName>
    <label>Pricebook Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
                <default>true</default>
                <label>AU</label>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
                <isActive>false</isActive>
                <label>UK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>